Fix wrong secret name

--- a/.github/workflows/build-blog.yml
+++ b/.github/workflows/build-blog.yml
@@ -11,6 +11,6 @@ jobs:
     steps:
       - name: Create repository dispatch event
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh api repos/ORG/REPO/dispatches --raw-field event_type=update-theme
