--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       PARENT_REPO: ${{ github.repository_owner }}/blog
-      BRANCH: theme-${{ github.sha }}
+      BRANCH: theme/${{ github.sha }}
       COMMIT_MESSAGE: Bump theme (${{ github.sha }})
     steps:
       - name: Checkout
