--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -20,8 +20,8 @@ jobs:
           submodules: true
           fetch-depth: 0
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name ${{ github.actor }}
+          git config user.email 10593679+wooseopkim@users.noreply.github.com
           git submodule update --remote 'themes/*'
           git checkout -b $BRANCH
           git add 'themes/*'
